deploy/mongodb-spring-data-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "rio-talks-mongodb-spring-data-mongo.fullname" . } }
  labels:
    app.kubernetes.io/name: { { include "rio-talks-mongodb-spring-data-mongo.name" . } }
    helm.sh/chart: { { include "rio-talks-mongodb-spring-data-mongo.chart" . } }
    app.kubernetes.io/instance: { { .Release.Name } }
    app.kubernetes.io/managed-by: { { .Release.Service } }
spec:
  type: { { .Values.service.type } }
  ports:
    - port: { { .Values.service.port } }
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: { { include "rio-talks-mongodb-spring-data-mongo.name" . } }
    app.kubernetes.io/instance: { { .Release.Name } }
