deploy/mongodb-spring-data-chart/templates/ingress.yaml
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "rio-talks-mongodb-spring-data-mongo.fullname" . - } }
  { { - $ingressPath := .Values.ingress.path - } }
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
    app.kubernetes.io/name: { { include "rio-talks-mongodb-spring-data-mongo.name" . } }
    helm.sh/chart: { { include "rio-talks-mongodb-spring-data-mongo.chart" . } }
    app.kubernetes.io/instance: { { .Release.Name } }
    app.kubernetes.io/managed-by: { { .Release.Service } }
  { { - with .Values.ingress.annotations } }
  annotations:
  { { toYaml . | indent 4 } }
  { { - end } }
spec:
  { { - if .Values.ingress.tls } }
tls:
  { { - range .Values.ingress.tls } }
- hosts:
  { { - range .hosts } }
  - { { . | quote } }
  { { - end } }
  secretName: { { .secretName } }
  { { - end } }
  { { - end } }
rules:
  { { - range .Values.ingress.hosts } }
- host: { { . | quote } }
  http:
    paths:
      - path: { { $ingressPath } }
        backend:
          serviceName: { { $fullName } }
          servicePort: http
  { { - end } }
  { { - end } }
